<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="46dp"
                        android:layout_height="114dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/maestrobutton" />

                    <TextView
                        android:id="@+id/txtUserEmailLabel"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btnRegistrar"
                        android:textAlignment="center"
                        android:textColor="#00BCD4"
                        android:textSize="20sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/txtNombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nUser"
                    android:inputType="textPersonName"
                    android:maxLength="20" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nEmail"
                    android:inputType="textPersonName"
                    android:maxLength="100" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nPass"
                    android:inputType="textPassword"
                    android:maxLength="20" />

                <EditText
                    android:id="@+id/txtCopiaPassoword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nRepetir"
                    android:inputType="textPassword"
                    android:maxLength="20" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="aceptar"
                    android:text="@string/Aceptar"  />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>